--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Seredempia",
   "version": "1.0.0",
-  "description": "A web application",
+  "description": "A WEB Server application",
   "engines": {
     "node": "4.4.5",
     "npm": "2.15.5"
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/seredempia"
+    "url": "https://git.heroku.com/seredempiaserver.git"
   },
   "keywords": [
     "Seredempia"
