--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Seredempia",
   "version": "1.0.0",
-  "description": "A WEB Server application",
+  "description": "Graduation Project - Mateus Oliveira Carvalho: Web Server Application",
   "engines": {
     "node": "4.4.5",
     "npm": "2.15.5"
